cluster/infrastructure/root-ceph/storage/files/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rook-ceph-cluster
  namespace: rook-ceph
spec:
  routes:
    - kind: Rule
      match: Host(`rook-cluster.gato.hermleigh.home`,`rook-cluster.gato`)
      services:
        - name: rook-ceph
          port: 8443
    - kind: Rule
      match: Host(`object.gato.hermleigh.home`)
      services:
        - name: rook-ceph-rgw-ceph-objectstore
          port: 80
